# Turbo-Cat

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  benchmark_comparison.py  benchmark_detailed.py  benchmark_final.py  benchmark_full.py  benchmark_quick.py  benchmark_symmetric.py  benchmark_turbocat_vs_catboost.py  build.sh  comprehensive_benchmark.py  debug_quality.py  final_benchmark.py  profile_turbocat.py  pyproject.toml  run_tests.py  test_multiclass.ipynb  test_multiclass.py  test_multiclass_output.ipynb  test_speed.py  test_turbocat.ipynb  turbocat_vs_catboost.ipynb  turbocat_vs_catboost_output.ipynb
benchmarks/: bench_histogram.cpp  bench_tree.cpp
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
examples/: benchmark_vs_catboost.py
include/turbocat/: booster.hpp  config.hpp  dataset.hpp  fast_ensemble.hpp  fast_float_ensemble.hpp  feature_bundler.hpp  feature_orderings.hpp  flat_tree.hpp  histogram.hpp  interactions.hpp  leaf_wise_tree.hpp  loss.hpp  metrics.hpp  symmetric_tree.hpp  tree.hpp  turbocat.hpp  types.hpp
python/: bindings.cpp  setup.py
python/turbocat/: __init__.py
src/boosting/: booster.cpp  loss.cpp
src/core/: config.cpp  dataset.cpp  types.cpp
src/tree/: fast_ensemble.cpp  fast_float_ensemble.cpp  feature_bundler.cpp  feature_orderings.cpp  flat_tree.cpp  gradtree.cpp  histogram.cpp  leaf_wise_tree.cpp  splitter.cpp  symmetric_tree.cpp  tree.cpp
src/utils/: simd.cpp  threading.cpp
tests/: test_basic.cpp  test_booster.cpp  test_gradtree.cpp  test_histogram.cpp  test_tree.cpp  test_turbocat.py
turbocat/: __init__.py
