[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "turbocat"
version = "0.2.0"
description = "High-performance gradient boosting library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.19.0"]

[project.optional-dependencies]
dev = ["pytest", "scikit-learn"]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "-DTURBOCAT_BUILD_TESTS=OFF", "-DTURBOCAT_BUILD_BENCHMARKS=OFF"]
wheel.packages = ["turbocat"]